--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -1,40 +1,17 @@
 /**
- * /* General layouts
  *
  * @format
  */
 
-/* Header */
-
-/* Sections */
-
-p a {
-  color: #000;
-  text-decoration: none;
-  position: relative;
-  cursor: pointer;
-}
-
-p a:hover:before {
-  height: calc(100% + 6px);
-}
-
-p a:before {
-  position: absolute;
-  background-color: #df73ff;
-  width: 100%;
-  height: 4px;
-  bottom: -3px;
-  content: " ";
-  mix-blend-mode: multiply;
-  transition-property: height;
-  transition-duration: 0.3s;
-  transition-timing-function: ease;
-  transition-delay: 0s;
-  border-radius: 4px;
-}
-
 /* Section: Form */
+
+:root {
+  --color-link-underline: var(--color-pink-well);
+}
+
+main {
+  padding-top: 2rem;
+}
 
 .fancyLine {
   border-bottom: 5px solid var(--color-deep-blue-something);
