--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -34,49 +34,13 @@ h2 {
 
 /*Section: Hero */
 
-#hero {
+.hero {
   padding: 0;
   position: relative;
   min-height: 540px;
 }
 
-/* Homepage responsive tweaks */
-
-@media (max-width: 60rem) {
-  #hero #now {
-    padding-left: 120px;
-    text-align: center;
-  }
-}
-
-@media (max-width: 50rem) {
-  #hero #now {
-    padding-left: 60px;
-    text-align: center;
-  }
-}
-
-@media (max-width: 42rem) {
-  #hero #now {
-    padding-left: 0px;
-    text-align: center;
-    padding-top: 20px;
-  }
-  #hero {
-    text-align: center;
-  }
-  #hero #hero-logo {
-    width: 100%;
-    left: -24px;
-    position: relative;
-  }
-  .options--visual img {
-    /*padding:20px;*/
-    width: 50%;
-  }
-}
-
-#hero .bg {
+.hero-bg {
   position: absolute;
   margin-top: -5rem;
   height: calc(800px + 5rem);
@@ -97,12 +61,12 @@ h2 {
     rgba(5, 4, 34, 1) 0%,
     rgba(28, 14, 140, 1) 85%
   );
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="var(--color-midnight)",endColorstr="#080571",GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#050422",endColorstr="#080571",GradientType=1);
   /*   transform: rotate(-3deg); */
   z-index: -1;
 }
 
-#hero .bg-images {
+.hero-container {
   width: 100%;
   max-width: 49rem;
   height: 100%;
@@ -113,7 +77,7 @@ h2 {
 }
 
 @media (max-width: 42rem) {
-  #hero .bg-images--overflow {
+  .hero .hero-container--overflow {
     height: 100%;
     overflow: hidden;
     position: relative;
@@ -121,100 +85,95 @@ h2 {
   }
 }
 
-#hero .hero-bg-img {
+.hero .hero-bg-img {
   position: absolute;
   bottom: 0px;
   left: 0px;
 }
 
-#hero .hero-bg-img.star1 {
+.hero .hero-bg-img.star1 {
   bottom: 80px;
   left: -100px;
 }
 
-#hero .hero-bg-img.star2 {
+.hero .hero-bg-img.star2 {
   bottom: 421px;
   left: -210px;
 }
 
-#hero .hero-bg-img.star3 {
+.hero .hero-bg-img.star3 {
   bottom: 130px;
   left: 320px;
 }
 
-#hero .hero-bg-img.star4 {
+.hero .hero-bg-img.star4 {
   left: 50px;
   max-width: 100%;
 }
 
 @media (max-width: 42rem) {
-  #hero .hero-bg-img.star4 {
+  .hero .hero-bg-img.star4 {
     top: -175px;
   }
 }
 
 @media (min-width: 42rem) {
-  #hero .hero-bg-img.star4 {
+  .hero .hero-bg-img.star4 {
     top: -350px;
   }
 }
 
-#hero .hero-bg-img.star5 {
+.hero .hero-bg-img.star5 {
   bottom: 100px;
   left: 820px;
 }
 
 @media (max-width: 42rem) {
-  #hero .hero-bg-img.star5 {
+  .hero .hero-bg-img.star5 {
     display: none;
   }
 }
 
-#hero .hero-bg-img.mic {
+.hero .hero-bg-img.mic {
   bottom: 212px;
   left: 195px;
 }
 
-#hero .section--content {
+.hero .section--content {
   position: relative;
   z-index: 0;
 }
 
-#hero .layout-flex {
+.hero .layout-flex {
   align-items: flex-start;
 }
 
-#hero #hero-logo {
+.hero .hero-logo {
   width: 130%;
   left: -22px;
   position: relative;
 }
 
-#hero #hero-tagline {
+.hero .hero-tagline {
   font-size: 1.2em;
   color: var(--color-linen);
   font-weight: 400;
 }
 
-#hero .hero--content {
+.hero .hero--content {
   padding: 5rem;
 }
 
 @media (min-width: 68rem) {
-  #hero .hero--content {
+  .hero .hero--content {
     padding: 5rem 0;
   }
 }
 
 /* Section: Form */
 
-#hero h2 {
+.hero h2 {
   color: var(--color-linen);
-}
-
-#hero #now {
-  padding-left: 140px;
-  /*   text-align:center; */
 }
 
 #now h2 {
@@ -222,7 +181,7 @@ h2 {
   font-weight: 500;
 }
 
-#hero a {
+.hero a {
   color: var(--color-linen);
   font-weight: 400;
 }
@@ -467,32 +426,11 @@ footer {
   padding: 2rem;
 }
 
-/* Homepage responsive tweaks */
-
-@media (max-width: 60rem) {
-  #hero #now {
-    padding-left: 120px;
-    /*     text-align:center; */
-  }
-}
-
-@media (max-width: 50rem) {
-  #hero #now {
-    padding-left: 60px;
-    /*     text-align:center; */
-  }
-}
-
 @media (max-width: 42rem) {
-  #hero #now {
-    padding-left: 0px;
-    /*     text-align:center; */
-    padding-top: 20px;
-  }
-  #hero {
+  .hero {
     text-align: center;
   }
-  #hero #hero-logo {
+  .hero .hero-logo {
     width: 100%;
     left: -24px;
     position: relative;
@@ -587,4 +525,21 @@ section#newsletter {
   border-radius: 0px 5px 5px 0px;
   border-left: 3px solid var(--color-midnight);
   outline: 0;
+}
+
+.join-container {
+  display: grid;
+  column-gap: 2rem;
+  grid-template-columns: 1fr;
+}
+
+@media (min-width: 60rem) {
+  .join-container {
+    grid-template-columns: minmax(0, 1fr) 320px;
+  }
+
+  .join-image {
+    position: relative;
+    left: -1rem;
+  }
 }
