--- a/public/styles/shared.css
+++ b/public/styles/shared.css
@@ -49,7 +49,21 @@
   --color-old-yellow: #c8ef00;
   --color-moray-teal: #51e8e4;
 
+  --color-text: var(--color-midnight);
+  --color-link-text: var(--color-midnight);
   --color-link-underline: var(--color-peach);
+}
+
+.light {
+  --color-text: var(--color-midnight);
+  --color-link-text: var(--color-midnight);
+  color: var(--color-text);
+}
+
+.dark {
+  --color-text: var(--color-linen);
+  --color-link-text: var(--color-linen);
+  color: var(--color-text);
 }
 
 * {
@@ -71,6 +85,13 @@ p {
   margin-bottom: 10px;
 }
 
+a {
+  color: var(---color-link-text);
+  text-decoration: none;
+  position: relative;
+  cursor: pointer;
+}
+
 blockquote {
   font-style: italic;
 }
@@ -86,110 +107,6 @@ h2 {
   font-size: 2rem;
   margin: 0 0 1rem;
   text-align: left;
-}
-
-/* Header */
-
-header {
-  font-size: 1.35rem;
-  padding: 1rem;
-  position: relative;
-  top: 0;
-  font-family: var(--font-brand);
-  font-size: 1.5em;
-  font-weight: bold;
-  line-height: 1.4em;
-  z-index: 999;
-}
-
-main a {
-  color: var(--color-midnight);
-  text-decoration: none;
-  position: relative;
-  cursor: pointer;
-}
-
-main a:hover:before {
-  height: calc(100% + 6px);
-}
-
-main a:before {
-  position: absolute;
-  background-color: var(--color-link-underline);
-  width: 100%;
-  height: 4px;
-  bottom: -3px;
-  content: " ";
-  mix-blend-mode: multiply;
-  transition: height 0.3s ease;
-  transition-delay: 0s;
-  border-radius: 4px;
-}
-
-li {
-  padding: 4px;
-}
-
-header.revealed {
-  visibility: visible;
-  position: sticky;
-  box-shadow: 0px -3px 20px 1px rgba(0, 0, 0, 0.3);
-  background: white;
-}
-
-.header--contents {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: auto;
-  max-width: 60rem;
-  max-width: calc(100% - 60px);
-  width: 100%;
-}
-
-header .page-link a {
-  text-transform: uppercase;
-  text-decoration: none !important;
-  font-weight: 600;
-  font-size: 1.2rem;
-  color: var(--color-midnight);
-}
-
-.logo {
-  font-size: inherit;
-  margin: 0;
-  position: relative;
-  font-weight: 700;
-  top: 4px;
-}
-
-.logo a {
-  text-decoration: none;
-  color: var(--color-midnight);
-}
-
-header .page-link.about {
-  margin-right: 40px;
-}
-
-.about {
-  margin: 0 auto;
-  max-width: 40em;
-}
-
-.tag-tilt {
-  background: var(--color-pretty-in-pink);
-  color: var(--color-linen);
-  font-size: 1rem;
-  padding: 0.01rem 0.4rem;
-  position: absolute;
-  left: calc(100% + 0.25rem);
-  top: -32%;
-  height: 22px;
-  border-radius: 2px;
-  line-height: 25px;
-  transform: rotate(-10deg);
-  font-weight: 400;
 }
 
 /* Button */
@@ -235,17 +152,57 @@ h2 {
   font-size: 2rem;
 }
 
-/* Header */
+/**
 
-header .page-link.blog {
-  margin-right: 40px;
+db   db d88888b  .d8b.  d8888b. d88888b d8888b. 
+88   88 88'     d8' `8b 88  `8D 88'     88  `8D 
+88ooo88 88ooooo 88ooo88 88   88 88ooooo 88oobY' 
+88~~~88 88~~~~~ 88~~~88 88   88 88~~~~~ 88`8b   
+88   88 88.     88   88 88  .8D 88.     88 `88. 
+YP   YP Y88888P YP   YP Y8888D' Y88888P 88   YD 
+
+*/
+
+header {
+  font-size: 1.35rem;
+  padding: 1rem;
+  position: relative;
+  top: 0;
+  font-family: var(--font-brand);
+  font-size: 1.5em;
+  font-weight: bold;
+  line-height: 1.4em;
+  z-index: 999;
 }
 
-header .page-link.faq {
-  margin-right: 40px;
+header.revealed {
+  --color-text: var(--color-midnight);
+  --color-link-text: var(--color-midnight);
+  visibility: visible;
+  position: sticky;
+  box-shadow: 0px -3px 20px 1px rgba(0, 0, 0, 0.3);
+  background: white;
 }
 
-.tag-tilt {
+.navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-width: 60rem;
+  max-width: calc(100% - 60px);
+  width: 100%;
+  padding: 0 1rem;
+}
+
+.brand-logo {
+  font-size: inherit;
+  margin: 0;
+  position: relative;
+  font-weight: 700;
+  top: 4px;
+}
+
+.brand-betatag {
   background: var(--color-pretty-in-pink);
   color: var(--color-linen);
   font-size: 1rem;
@@ -258,6 +215,84 @@ header .page-link.faq {
   line-height: 25px;
   transform: rotate(-10deg);
   font-weight: 500;
+}
+
+.navigation-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navigation-item {
+  display: inline-block;
+}
+
+.navigation-item + .navigation-item {
+  margin-left: 2rem;
+}
+
+.navigation-link {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 1.2rem;
+  display: inline-block;
+  color: var(--color-link-text);
+  position: relative;
+  line-height: 1.5;
+  transition: all 0.2s ease-in-out;
+}
+
+.navigation-link--home {
+  color: var(--color-link-text);
+  text-decoration: none;
+}
+
+.navigation-link__active:before {
+  content: " ";
+  background-color: var(--color-link-underline);
+  height: 1rem;
+  width: calc(100% + 25px);
+  left: -12px;
+  bottom: 0;
+  position: absolute;
+  z-index: -1;
+  border-radius: 20px;
+}
+
+.navigation-link:hover:not(.navigation-link__active) {
+  transform: scale(1.07);
+}
+
+/**
+
+ .o88b.  .d88b.  d8b   db d888888b d88888b d8b   db d888888b 
+d8P  Y8 .8P  Y8. 888o  88 `~~88~~' 88'     888o  88 `~~88~~' 
+8P      88    88 88V8o 88    88    88ooooo 88V8o 88    88    
+8b      88    88 88 V8o88    88    88~~~~~ 88 V8o88    88    
+Y8b  d8 `8b  d8' 88  V888    88    88.     88  V888    88    
+ `Y88P'  `Y88P'  VP   V8P    YP    Y88888P VP   V8P    YP 
+ */
+
+main a:hover:before {
+  height: calc(100% + 6px);
+}
+
+main a:before {
+  position: absolute;
+  background-color: var(--color-link-underline);
+  width: 100%;
+  height: 4px;
+  bottom: -3px;
+  content: " ";
+  mix-blend-mode: multiply;
+  transition: height 0.3s ease;
+  transition-delay: 0s;
+  border-radius: 4px;
+}
+
+li {
+  padding: 4px;
 }
 
 .blue-gradient {
@@ -278,30 +313,6 @@ header .page-link.faq {
     rgba(8, 5, 113, 1) 100%
   );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="var(--color-midnight)",endColorstr="#080571",GradientType=1);
-}
-/** Header */
-
-form {
-  color: var(--color-linen);
-  border-radius: 1rem;
-  display: flex;
-  flex-direction: column;
-}
-
-form label,
-form input {
-  margin-bottom: 1rem;
-  padding: 0 1rem;
-  width: 100%;
-  border-radius: 8px;
-  height: 48px;
-  font-weight: 400;
-  font-size: 18px;
-  font-family: var(--font-brand);
-}
-
-form input[type="text"] {
-  border: 2px solid var(--color-midnight);
 }
 
 section:nth-of-type(even) {
@@ -367,96 +378,7 @@ section#options .section--content * {
   font-size: 18px;
 }
 
-/* Section: How it works */
-
-section#how-it-works {
-  color: var(--color-linen);
-}
-
-.how-it-works--list {
-  list-style-type: none;
-  padding-left: 0;
-  margin: auto;
-  max-width: 40rem;
-}
-
-.how-it-works--visual {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-}
-
-.how-it-works--visual img {
-  width: 200px;
-  padding: 20px;
-}
-
-.how-it-works--description {
-  margin: 2rem auto;
-  max-width: 15rem;
-  text-align: center;
-  line-height: 1.6rem;
-}
-
-.how-it-works--label {
-  display: block;
-  font-size: 1.5rem;
-  font-weight: 500;
-  margin-bottom: 1rem;
-  text-transform: uppercase;
-}
-
-.text-magenta {
-  color: var(--color-magentleman);
-}
-
-.text-yellow {
-  color: var(--color-old-yellow);
-}
-
-.text-pink {
-  color: var(--color-pretty-in-pink);
-}
-
-/* Section: Recap */
-
-section#recap {
-  position: relative;
-  background: none;
-}
-
-section#recap .bg {
-  background: var(--color-toxic-avenger) !important;
-  width: calc(100% - 60px);
-  max-width: 60rem;
-  margin: auto;
-  position: absolute;
-  left: 0px;
-  right: 0px;
-  top: 0px;
-  height: 100%;
-  z-index: 0;
-  border-radius: 20px;
-  transform: skew(0deg, 1.4deg);
-}
-
-.input-radio {
-  width: 10px;
-}
-
 /* Special Footer style */
-
-footer {
-  background: var(--color-midnight);
-  color: var(--color-linen);
-  padding: 2rem;
-}
-
-#footer--content {
-  width: calc(100% - 60px);
-  max-width: 70rem;
-  margin: auto;
-}
 
 .highlighted {
   position: relative;
@@ -474,17 +396,27 @@ footer {
   border-radius: 20px;
 }
 
-/* Footer */
+/**
+    d88888b  .d88b.   .d88b.  d888888b d88888b d8888b. 
+    88'     .8P  Y8. .8P  Y8. `~~88~~' 88'     88  `8D 
+    88ooo   88    88 88    88    88    88ooooo 88oobY' 
+    88~~~   88    88 88    88    88    88~~~~~ 88`8b   
+    88      `8b  d8' `8b  d8'    88    88.     88 `88. 
+    YP       `Y88P'   `Y88P'     YP    Y88888P 88   YD 
+*/
 
 /* Sonny 8/19/2020 */
 
-footer {
+.footer {
   background-color: var(--color-midnight);
   color: var(--color-linen);
   padding: 2rem;
 }
 
-#footer--content {
+.footer-container {
+  width: calc(100% - 60px);
+  max-width: 70rem;
+  margin: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: stretch;
@@ -530,43 +462,6 @@ footer {
   font-weight: bold;
 }
 
-.grow {
-  transition: all 0.2s ease-in-out;
-}
-.grow:hover {
-  transform: scale(1.07);
-}
-
-.floating {
-  animation-name: floating;
-  animation-duration: 4s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-  margin-left: 30px;
-  margin-top: 5px;
-}
-
-@keyframes floating {
-  0% {
-    transform: translate(0, 0px);
-  }
-  50% {
-    transform: translate(0, 9px);
-  }
-  100% {
-    transform: translate(0, -0px);
-  }
-}
-
-.floating2 {
-  animation-name: floating;
-  animation-duration: 9s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-  margin-left: 30px;
-  margin-top: 5px;
-}
-
 .container--md {
   max-width: calc(640px + 4rem);
   padding: 4rem 2rem 0;
@@ -577,18 +472,6 @@ footer {
 .article-grid {
   display: grid;
   row-gap: 4rem;
-}
-
-@keyframes floating2 {
-  0% {
-    transform: translate(0, 0px);
-  }
-  50% {
-    transform: translate(0, 3px);
-  }
-  100% {
-    transform: translate(0, -0px);
-  }
 }
 
 @media (min-width: 42rem) {
