--- a/public/styles/shared.css
+++ b/public/styles/shared.css
@@ -27,6 +27,16 @@
   font-weight: 500;
 }
 
+/**
+
+  db    db  .d8b.  d8888b. d888888b  .d8b.  d8888b. db      d88888b .d8888. 
+  88    88 d8' `8b 88  `8D   `88'   d8' `8b 88  `8D 88      88'     88'  YP 
+  Y8    8P 88ooo88 88oobY'    88    88ooo88 88oooY' 88      88ooooo `8bo.   
+  `8b  d8' 88~~~88 88`8b      88    88~~~88 88~~~b. 88      88~~~~~   `Y8b. 
+  `8bd8'  88   88 88 `88.   .88.   88   88 88   8D 88booo. 88.     db   8D 
+    YP    YP   YP 88   YD Y888888P YP   YP Y8888P' Y88888P Y88888P `8888Y' 
+*/
+
 :root {
   --breakpoint-xs: 28rem;
   --breakpoint-sm: 35rem;
@@ -37,6 +47,7 @@
   --font-brand: Linotte, Arial, Helvetica, sans-serif;
 
   --color-linen: #ffffff;
+  --color-jet: #000000;
   --color-midnight: #050422;
   --color-peach: #ffb48e;
   --color-deep-blue-something: #0c0a57;
@@ -66,6 +77,27 @@
   color: var(--color-text);
 }
 
+.magenta {
+  color: var(--color-magentleman);
+}
+
+.yellow {
+  color: var(--color-old-yellow);
+}
+
+.pink {
+  color: var(--color-pretty-in-pink);
+}
+
+/**
+d8888b. d88888b .d8888. d88888b d888888b 
+88  `8D 88'     88'  YP 88'     `~~88~~' 
+88oobY' 88ooooo `8bo.   88ooooo    88    
+88`8b   88~~~~~   `Y8b. 88~~~~~    88    
+88 `88. 88.     db   8D 88.        88    
+88   YD Y88888P `8888Y' Y88888P    YP    
+*/
+
 * {
   box-sizing: border-box;
 }
@@ -78,6 +110,19 @@ body {
   font-family: var(--font-brand);
   font-weight: 400;
   color: var(--color-midnight);
+}
+
+img {
+  max-width: 100%;
+}
+
+/* Text */
+
+h2 {
+  font-weight: 600;
+  font-size: 2rem;
+  margin: 0 0 1rem;
+  text-align: left;
 }
 
 p {
@@ -96,20 +141,14 @@ blockquote {
   font-style: italic;
 }
 
-img {
-  max-width: 100%;
-}
-
-/* Text */
-
-h2 {
-  font-weight: 600;
-  font-size: 2rem;
-  margin: 0 0 1rem;
-  text-align: left;
-}
-
-/* Button */
+/**
+  d88888b db      d88888b .88b  d88. d88888b d8b   db d888888b .d8888. 
+  88'     88      88'     88'YbdP`88 88'     888o  88 `~~88~~' 88'  YP 
+  88ooooo 88      88ooooo 88  88  88 88ooooo 88V8o 88    88    `8bo.   
+  88~~~~~ 88      88~~~~~ 88  88  88 88~~~~~ 88 V8o88    88      `Y8b. 
+  88.     88booo. 88.     88  88  88 88.     88  V888    88    db   8D 
+  Y88888P Y88888P Y88888P YP  YP  YP Y88888P VP   V8P    YP    `8888Y'             
+*/
 
 .button {
   font-size: 18px;
@@ -145,13 +184,6 @@ h2 {
   opacity: 0.5;
 }
 
-/* Text */
-
-h2 {
-  font-weight: 600;
-  font-size: 2rem;
-}
-
 /**
 
 db   db d88888b  .d8b.  d8888b. d88888b d8888b. 
@@ -163,11 +195,13 @@ YP   YP Y88888P YP   YP Y8888D' Y88888P 88   YD
 
 */
 
-header {
+.header {
   font-size: 1.35rem;
   padding: 1rem;
-  position: relative;
+  position: absolute;
   top: 0;
+  left: 0;
+  right: 0;
   font-family: var(--font-brand);
   font-size: 1.5em;
   font-weight: bold;
@@ -175,9 +209,10 @@ header {
   z-index: 999;
 }
 
-header.revealed {
+.header__revealed {
   --color-text: var(--color-midnight);
   --color-link-text: var(--color-midnight);
+  background-color: var(--color-linen);
   visibility: visible;
   position: sticky;
   box-shadow: 0px -3px 20px 1px rgba(0, 0, 0, 0.3);
@@ -243,7 +278,7 @@ header.revealed {
   transition: all 0.2s ease-in-out;
 }
 
-.navigation-link--home {
+.navigation-link__home {
   color: var(--color-link-text);
   text-decoration: none;
 }
@@ -273,6 +308,18 @@ d8P  Y8 .8P  Y8. 888o  88 `~~88~~' 88'     888o  88 `~~88~~'
 Y8b  d8 `8b  d8' 88  V888    88    88.     88  V888    88    
  `Y88P'  `Y88P'  VP   V8P    YP    Y88888P VP   V8P    YP 
  */
+
+.container--md {
+  max-width: calc(640px + 4rem);
+  padding: 4rem 2rem 0;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.article-grid {
+  display: grid;
+  row-gap: 4rem;
+}
 
 main a:hover:before {
   height: calc(100% + 6px);
@@ -315,87 +362,6 @@ li {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="var(--color-midnight)",endColorstr="#080571",GradientType=1);
 }
 
-section:nth-of-type(even) {
-  background: #ccc;
-}
-
-/* Section: Options */
-
-section#options {
-  position: relative;
-  background: none;
-  color: var(--color-linen);
-  text-align: center;
-}
-.diagonal-bg {
-  background-color: var(--color-pretty-in-pink);
-  width: 200%;
-  position: absolute;
-  top: 6px;
-  left: -50%;
-  height: 100%;
-  z-index: 0;
-  transform: rotate(-3deg);
-}
-
-.section--content {
-  margin: auto;
-  max-width: 49rem;
-}
-
-.section--callout {
-  padding: 2rem 0;
-}
-
-section#options .section--content * {
-  z-index: 1;
-  position: relative;
-}
-
-.options--visual {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.options--visual img {
-  padding: 20px;
-  width: 75%;
-}
-
-.options--or {
-  text-align: center;
-  font-weight: 700;
-  font-size: 32px;
-  padding: 16px;
-  color: var(--color-red-hots);
-}
-
-.options--description {
-  font-weight: 500;
-  padding: 16px;
-  text-align: center;
-  font-size: 18px;
-}
-
-/* Special Footer style */
-
-.highlighted {
-  position: relative;
-}
-
-.highlighted:before {
-  content: " ";
-  background-color: var(--color-link-underline);
-  height: 70%;
-  width: calc(100% + 25px);
-  left: -12px;
-  bottom: -2px;
-  position: absolute;
-  z-index: -1;
-  border-radius: 20px;
-}
-
 /**
     d88888b  .d88b.   .d88b.  d888888b d88888b d8888b. 
     88'     .8P  Y8. .8P  Y8. `~~88~~' 88'     88  `8D 
@@ -408,7 +374,7 @@ section#options .section--content * {
 /* Sonny 8/19/2020 */
 
 .footer {
-  background-color: var(--color-midnight);
+  background-color: var(--color-jet);
   color: var(--color-linen);
   padding: 2rem;
 }
@@ -460,33 +426,4 @@ section#options .section--content * {
 #footer-name {
   font-size: 1.35rem;
   font-weight: bold;
-}
-
-.container--md {
-  max-width: calc(640px + 4rem);
-  padding: 4rem 2rem 0;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.article-grid {
-  display: grid;
-  row-gap: 4rem;
-}
-
-@media (min-width: 42rem) {
-  .layout-flex {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-  }
-
-  .layout-flex--half {
-    flex: 3;
-  }
-
-  .layout-flex--third {
-    flex: 2;
-  }
 }
