--- a/public/styles/faq.css
+++ b/public/styles/faq.css
@@ -25,7 +25,7 @@
   border: none;
   text-align: left;
   outline: none;
-  font-size: 18px;
+  font-size: var(--font-size-md);
   font-family: var(--font-brand);
   font-weight: 500;
   border-radius: 10px;
