--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -243,7 +243,7 @@ form input {
   border-radius: 8px;
   height: 48px;
   font-weight: 400;
-  font-size: 18px;
+  font-size: var(--font-size-md);
   font-family: var(--font-brand);
 }
 
@@ -315,7 +315,7 @@ form input[type="text"] {
 .options--or {
   text-align: center;
   font-weight: 700;
-  font-size: 32px;
+  font-size: var(--font-size-xl);
   padding: 16px;
   color: var(--color-red-hots);
 }
@@ -324,7 +324,7 @@ form input[type="text"] {
   font-weight: 500;
   padding: 16px;
   text-align: center;
-  font-size: 18px;
+  font-size: var(--font-size-md);
 }
 
 /* Section: How it works */
@@ -402,7 +402,7 @@ section#steps {
 }
 
 .recap-description {
-  font-size: 2rem;
+  font-size: var(--font-size-xl);
   margin: auto;
   max-width: 30rem;
   font-weight: 500;
@@ -480,7 +480,7 @@ section#newsletter {
   margin-left: -75px;
   opacity: 0;
   transition: opacity 0.3s;
-  font-size: 14px;
+  font-size: var(--font-size-xs);
 }
 
 .tooltip .tooltiptext::after {
@@ -504,7 +504,7 @@ section#newsletter {
   height: 50px;
   border: 0px;
   border-radius: 8px 0px 0px 8px;
-  font-size: 19px;
+  font-size: var(--font-size-md);
   font-family: var(--font-brand);
   text-align: left;
   margin: 0px;
@@ -516,7 +516,7 @@ section#newsletter {
 
 #copy {
   padding: 0px 30px;
-  font-size: 15px;
+  font-size: var(--font-size-sm);
   margin-right: 0px;
   display: inline-block;
   border: 0px;
